css not showing up fixed - settings.py

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,9 @@
 .purple-body {
     background: #EEF2FF;
+    padding: 0;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
 .dark-ho-strip {
@@ -10,6 +14,9 @@
     background: #8AAEFF;
 }
 
+
+
 h1{
 color: red;
+background: #C0CEFF;
 }
